# OpenGL-Engine

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: default.frag  default.vert
include/: Application.hpp  Camera.hpp  Image.hpp  Light.hpp  Shader.hpp  Texture.hpp  callbacks.hpp
include/applications/: Application.hpp  CellularAutomataApp.hpp  GameOfLifeApp.hpp
include/applications/cellular_automata/: Cell.hpp  Ruleset.hpp
include/applications/game_of_life/: Cell.hpp  Ruleset.hpp
include/assets/: AssetManager.hpp  Camera.hpp  GLTF.hpp  Image.hpp  Shader.hpp  Texture.hpp
include/culling/: AABB.hpp  Frustum.hpp  Ray.hpp
include/engine/: Application.hpp  ApplicationBase.hpp  ApplicationBase.tpp  Callbacks.hpp  Camera.hpp  EventHandler.hpp  Framebuffer.hpp  Image.hpp  Node.hpp  Scene.hpp  SceneGraph.hpp  Shader.hpp  Shader.tpp  Texture.hpp  Window.hpp  callbacks.hpp
include/materials/: MRMaterial.hpp  Material.hpp  PhongMaterial.hpp
include/maths/: Matrix4.hpp  Transform.hpp  constants.hpp  geometry.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  transformations.hpp  transforms.hpp  trigonometry.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/mesh/: Attribute.hpp  LineMesh.hpp  Mesh.hpp  PointMesh.hpp  TriangleMesh.hpp  Vertex.hpp  meshes.hpp  primitives.hpp
include/utility/: HeapArray.hpp  LifetimeLogger.hpp  Random.hpp  ansi.hpp  gl_enums.hpp
lib/tinygltf/: tiny_gltf.h
shaders/: default.vert  line_mesh.frag
shaders/application/: default.frag  default.vert
shaders/cellular_automata/: cellular_automata.frag  cellular_automata.vert
shaders/compute/: frustum_culling.comp
shaders/fragment/: background.frag  blinn_phong.frag  default.frag  flat.frag  lambert.frag  phong.frag  post_processing.frag  spotlight.frag
shaders/game_of_life/: game_of_life.frag  game_of_life.vert
shaders/line_mesh/: line_mesh.vert
shaders/metallic-roughness/: get_directions_no_tangent.frag  get_directions_tangent.frag  metallic_roughness.frag
shaders/normals_mesh/: normals_mesh.geom  normals_mesh.vert
shaders/point_mesh/: point_mesh.frag  point_mesh.vert
shaders/vertex/: pos.vert  pos_normal.vert  pos_normal_tex.vert  pos_tex.vert  position_only.vert  tangent.vert
shaders/wireframe/: wireframe.geom
src/: Application.cpp  Camera.cpp  Image.cpp  Shader.cpp  Texture.cpp  callbacks.cpp  cellular_automata.cpp  game_of_life.cpp  main.cpp
src/applications/: Application.cpp  CellularAutomataApp.cpp  GameOfLifeApp.cpp
src/applications/cellular_automata/: Cell.cpp  Ruleset.cpp
src/applications/game_of_life/: Cell.cpp  Ruleset.cpp
src/assets/: AssetManager.cpp  Camera.cpp  Cubemap.cpp  GLTF.cpp  Image.cpp  Shader.cpp  Texture.cpp
src/culling/: AABB.cpp  Frustum.cpp  Ray.cpp
src/engine/: Application.cpp  ApplicationBase.cpp  Callbacks.cpp  Camera.cpp  EventHandler.cpp  Framebuffer.cpp  Image.cpp  Light.cpp  Node.cpp  Scene.cpp  SceneGraph.cpp  Shader.cpp  Texture.cpp  Window.cpp  callbacks.cpp
src/materials/: MRMaterial.cpp  Material.cpp  PhongMaterial.cpp
src/maths/: Matrix4.cpp  Transform.cpp  functions.cpp  geometry.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  transformations.cpp  transforms.cpp  trigonometry.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/mesh/: Attribute.cpp  LineMesh.cpp  Mesh.cpp  PointMesh.cpp  TriangleMesh.cpp  Vertex.cpp  meshes.cpp  primitives.cpp
src/utility/: Random.cpp  gl_enums.cpp
